<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.fightingpets.walk.WalkingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoinv"
        tools:context=".walk.WalkingFragment">

        <ImageView
            android:id="@+id/back_fromWalking_imageView"
            android:layout_width="27dp"
            android:layout_height="19dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/back_mainzone"
            android:src="@drawable/whitearrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/town_button"
            android:layout_width="178dp"
            android:layout_height="42dp"
            android:layout_marginTop="100dp"
            android:background="#98FFFFFF"
            android:text="@string/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/forest_button"
            android:layout_width="178dp"
            android:layout_height="42dp"
            android:layout_marginTop="25dp"
            android:background="#98FFFFFF"
            android:text="@string/forest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/town_button" />

        <Button
            android:id="@+id/desertic_button"
            android:layout_width="178dp"
            android:layout_height="42dp"
            android:layout_marginTop="25dp"
            android:background="#98FFFFFF"
            android:text="@string/desert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forest_button" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/bonus1_imageView"
            android:layout_width="95dp"
            android:layout_height="113dp"
            android:layout_marginStart="75dp"
            android:layout_marginBottom="50dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/intentopocion" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/bonus2_imageView"
            android:layout_width="95dp"
            android:layout_height="113dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bonus1_imageView"
            app:srcCompat="@drawable/gifenergizar"
            tools:srcCompat="@drawable/gifenergizar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="318dp"
            android:layout_height="96dp"
            android:layout_marginTop="44dp"
            android:background="#33000000"
            android:gravity="center"
            android:text="@string/wheretogo"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bonuses_textView"
            android:layout_width="333dp"
            android:layout_height="196dp"
            android:layout_marginBottom="18dp"
            android:background="#33000000"
            android:paddingTop="5dp"
            android:text="@string/bonuses"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/area_textview"
            android:layout_width="367dp"
            android:layout_height="554dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="150dp"
            android:background="#BA3A2E2E"
            android:gravity="bottom"
            android:padding="5dp"
            android:text="@{viewModel.textArea}"
            android:textColor="#FFFFFF"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/stop"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>