<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.fightingpets.inventory.InventoryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoinv"
        tools:context=".inventory.InventoryFragment">

        <TextView
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:background="#A9683D3D"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/inventory_textView"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:background="#8E090808"
            android:gravity="center"
            android:text="@string/intentory"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/items_recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/object_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inventory_textView">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/object_imageView"
            android:layout_width="88dp"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/object_image_descript"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/gabumon" />

        <TextView
            android:id="@+id/item_description_textview"
            android:layout_width="197dp"
            android:layout_height="73dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/use_button"
            app:layout_constraintTop_toTopOf="@+id/background"
            tools:text="@string/coconut" />

        <ImageView
            android:id="@+id/settings_imageView"
            android:layout_width="28dp"
            android:layout_height="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/open_settings"
            android:src="@drawable/tuerca_blanca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_imageView"
            android:layout_width="27dp"
            android:layout_height="19dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/back_mainzone"
            android:src="@drawable/whitearrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_name_textView"
            android:layout_width="151dp"
            android:layout_height="21dp"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="84dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/use_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/use"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>